# inertial_sense_ros

./: .gitmodules  CMakeLists.txt  README.md
include/: inertial_sense.h
launch/: RTK_test.launch  test.launch
msg/: GPS.msg
src/: inertial_sense.cpp
